--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "react-dom": "^0.14.0-beta2",
     "react-routing": "0.0.4",
     "source-map-support": "0.3.2",
-    "superagent": "1.2.0"
+    "superagent": "1.2.0",
+    "glob": "~4.0.5",
+    "sequelize": "3.5.1",
+    "md5": "^2.0.0",
+    "mysql": "^2.8.0",
+    "nodemailer": "~1.3.0",
+    "passport": "~0.2.0",
+    "passport-local": "~1.0.0",
+    "bootstrap": "~3.3.5",
+    "font-awesome": "~4.4.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
